# xwim

./: .drone.yml  .gitignore  Makefile  README.md  meson.build
doc/: Doxyfile.in  meson.build
src/: Archiver.cpp  Archiver.hpp  Formats.hpp  Log.hpp  Opt.hpp  UserIntent.cpp  UserIntent.hpp  UserOpt.cpp  UserOpt.hpp  Xwim.cpp  Xwim.hpp  XwimConfig.hpp  XwimIntent.cpp  XwimIntent.hpp  archive.cpp  archive.hpp  archive_sys.cpp  archive_sys.hpp  argparse.cpp  argparse.hpp  fileformats.hpp  main.cpp  meson.build  spec.hpp
src/archiver/: LibArchiver.cpp
src/util/: Common.hpp  Log.hpp  argparse.cpp  argparse.hpp  log.hpp
test/: archive_test.cpp  fileformats_test.cpp  meson.build  user_opt_test.cpp
test/archives/: meson.build
tests/ahaahm/äh🦔~öhm/: ähä~öhm.txt
tests/runtests/: run.py
